# void

./: .coveragerc  .gitignore  README.md  Sniffer.py  d  pyproject.toml  setup.py
.circleci/: config.yml
data/: test.fit
docker/: docker-compose.yml
docker/cli/: Dockerfile
docker/db/: Dockerfile
docker/rpi/: Dockerfile  setup.psql
scripts/: void_reducer  void_selector  void_sniffer  void_writer
setup/: Setup.py  install_requirements.sh  packages.txt  python3-requirements.txt
setup/dataset/: 2018-08-18.txt
src/: FlagFiles.py  Reducer.py  Sniffer.py
void/: FlagFiles.py  common.py  config.py  math.py  math_utils.py  reducer.py  selector.py  settings.py  sniffer.py  writer.py
void/tests/: __main__.py  test_common.py  test_math.py  test_reducer.py  test_selector.py  test_sniffer.py  test_writer.py  tests.env
void/tests/data/: test2_flagged.fit  test_unflagged.fit
void/tests/data/sub/: test_in_sub_unflagged.fit
